--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ h1 {
     border-color: navy;  
     border-width: 2px;  
     border-style: inset;  
-    margin-right: 550px; 
+    margin-right: 600px; 
     font-size: 48px;
     font-weight: normal;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -89,6 +89,8 @@ img {
     width: 550px;
     height: 250px;
     opacity: 1;
+    display: flex;
+    flex-wrap: wrap;
     filter: alpha(opacity=100);
     background: url(https://images.unsplash.com/photo-1550537687-c91072c4792d?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTN8fHBhdHRlcm58ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=900&q=60) no-repeat;
     background-size: 1200px;
@@ -101,6 +103,8 @@ img {
     width: 550px;
     height: 250px;
     opacity: 1;
+    display: flex;
+    flex-wrap: wrap;
     filter: alpha(opacity=100);
     background: url(https://images.unsplash.com/photo-1586073305502-5c5cc4a594bd?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=654&q=80) no-repeat;
     background-size: 1200px;
@@ -114,6 +118,8 @@ img {
     width: 550px;
     height: 250px;
     opacity: 1;
+    display: flex;
+    flex-wrap: wrap;
     filter: alpha(opacity=100);
     background: url(https://images.unsplash.com/photo-1470092306007-055b6797ca72?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NDh8fG9jZWFufGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=900&q=60) no-repeat;
     background-size: 1200px;
@@ -126,6 +132,8 @@ img {
     width: 550px;
     height: 250px;
     opacity: 1;
+    display: flex;
+    flex-wrap: wrap;
     filter: alpha(opacity=100);
     background: url(https://images.unsplash.com/photo-1531165424588-80b93de6f807?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=668&q=80) no-repeat;
     background-size: 1200px;
@@ -294,6 +302,7 @@ section h6 {
     font-size: 20px;
 
 
+
 }
 
 footer h4 {
@@ -308,6 +317,8 @@ footer h4 {
 }
 
 footer .phone {
+    display: flex;
+    flex-wrap: wrap;
     margin-left: 225px;
     margin-top: -200px;
     color: black;
@@ -320,6 +331,8 @@ footer .phone {
 }
 
 footer .email {
+    display: flex;
+    flex-wrap: wrap;
     margin-left: 500px;
     margin-top: -40px;
     color: black;
@@ -332,6 +345,8 @@ footer .email {
 }
 
 footer .box {
+    display: flex;
+    flex-wrap: wrap;
     margin-left: 900px;
     margin-top: -40px;
     color: black;
@@ -353,7 +368,8 @@ footer .box {
 
 
   @media screen and (max-width: 768px) {
-    header {
+    header, .phone, .email, .box, section {
       flex-direction: column;
     }
-  } 
+  }
+  
